<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsextra"
                android:gravity="center"
                android:text="@string/daftar_akun"
                android:textColor="@color/primary"
                android:textSize="16pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppinsregular "
                android:gravity="center"
                android:text="@string/silahkan_membuat_akun_anda"
                android:textColor="@color/primary"
                android:textSize="8pt" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nama"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/nama_lengkap"
                android:paddingLeft="8dp"
                android:paddingTop="4dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/telp"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/nomor_hp"
                android:paddingStart="8dp"
                android:paddingTop="4dp" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/email"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/alamat_email"
                android:paddingStart="8dp"
                android:paddingTop="4dp" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/password"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/repassword"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingTop="4dp" />

            <Button
                android:id="@+id/btnDaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shape"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/redaftar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/sudah_punya_akun"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/btnMasuk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/remasuk"
                    android:textColor="@color/primary" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>