<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/backgroud" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppinsextra"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/primary"
                android:textSize="16pt"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/silahkan_login_untuk_melanjutkan"
                android:gravity="center"
                android:fontFamily="@font/poppinsregular "
                android:textSize="8pt"
                android:textColor="@color/primary"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/username"
                android:hint="@string/username"
                android:paddingLeft="8dp"
                android:fontFamily="@font/poppinsregular"
                android:paddingTop="4dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/password"
                android:hint="@string/password"
                android:paddingStart="8dp"
                android:fontFamily="@font/poppinsregular"
                android:paddingTop="4dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lupa_passwprd"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/primary"
                android:layout_marginTop="15dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/masuk"
                android:id="@+id/btnLogin"
                android:fontFamily="@font/poppinssemibold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/garis"
                android:layout_marginTop="20dp"
                />
            <ImageButton
                android:id="@+id/btnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/google_btn" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="200dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belom_punya_akun"
                    android:fontFamily="@font/poppinsregular"
                    android:textColor="@color/primary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/daftar"
                    android:id="@+id/btndaftar"
                    android:textColor="@color/primary"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>